[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Allows libsodium to be initialised with a seeded PRNG."
documentation = "http://docs.maidsafe.net/sodiumoxide_extras/latest"
homepage = "http://maidsafe.net"
license = "GPL-3.0"
name = "sodiumoxide_extras"
readme = "README.md"
repository = "https://github.com/maidsafe/sodiumoxide_extras"
version = "0.1.0"

[dependencies]
clippy = {version = "~0.0.76", optional = true}
lazy_static = "~0.2.1"
libc = "~0.2.12"
rand = "~0.3.14"
unwrap = "~1.1.0"

[dev-dependencies]
sodiumoxide = "~0.0.10"
